--- a/package.json
+++ b/package.json
@@ -1,22 +1,84 @@
 {
-  "name": "higa-pro",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
+    "@commitlint/cli": "17.6.5",
+    "@commitlint/config-conventional": "17.6.5",
+    "@mpth/react-no-ssr": "1.0.1",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
+    "@types/react-scroll": "1.8.7",
+    "@typescript-eslint/eslint-plugin": "5.59.9",
+    "@typescript-eslint/parser": "5.59.9",
+    "@uphold/commitlint-config": "1.1.1",
+    "commitlint-plugin-tense": "1.0.1",
     "eslint": "8.42.0",
+    "eslint-config-google": "0.14.0",
     "eslint-config-next": "13.4.5",
+    "eslint-config-prettier": "8.8.0",
+    "eslint-config-standard": "17.1.0",
+    "eslint-plugin-ext": "0.1.0",
+    "eslint-plugin-filenames": "1.3.2",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-n": "16.0.0",
+    "eslint-plugin-postcss-modules": "2.0.0",
+    "eslint-plugin-promise": "6.1.1",
+    "eslint-plugin-sort-destructure-keys": "1.5.0",
+    "eslint-plugin-sort-keys-fix": "1.1.2",
+    "eslint-plugin-typescript-sort-keys": "2.3.0",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "hamburger-react": "2.5.0",
+    "husky": "8.0.3",
+    "lint-staged": "13.2.2",
     "next": "13.4.5",
+    "pattern.css": "1.0.0",
+    "prettier": "2.8.8",
+    "rc-drawer": "6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.3"
-  }
+    "react-modern-drawer": "1.2.0",
+    "react-scroll": "1.8.9",
+    "react-scroll-to-top": "3.0.0",
+    "react-spacer": "1.3.0",
+    "ress": "5.0.2",
+    "sass": "1.63.3",
+    "sass-mq": "6.0.0",
+    "stylelint": "15.7.0",
+    "stylelint-config-css-modules": "4.2.0",
+    "stylelint-config-prettier-scss": "1.0.0",
+    "stylelint-config-recommended-scss": "12.0.0",
+    "stylelint-config-sass-guidelines": "10.0.0",
+    "stylelint-css-modules-no-global-scoped-selector": "1.0.2",
+    "stylelint-csstree-validator": "2.1.0",
+    "stylelint-declaration-block-no-ignored-properties": "2.7.0",
+    "stylelint-order": "6.0.3",
+    "stylelint-sass-render-errors": "3.0.1",
+    "typescript": "5.1.3",
+    "usehooks-ts": "2.9.1"
+  },
+  "name": "higa-pro",
+  "overrides": {
+    "stylelint-css-modules-no-global-scoped-selector": {
+      "stylelint@": "15.7.0"
+    },
+    "stylelint-csstree-validator": {
+      "stylelint@": "15.7.0"
+    },
+    "stylelint-sass-render-errors": {
+      "stylelint@": "15.7.0"
+    }
+  },
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "lint:style": "stylelint --fix '**/*.scss'",
+    "prepare": "npx husky install",
+    "prettier": "prettier --write .",
+    "start": "next start",
+    "stylelint-check": "stylelint-config-prettier-scss-check",
+    "type-check": "tsc --noemit"
+  },
+  "version": "0.1.0"
 }
