--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "@types/react-scroll": "1.8.7",
+    "@types/uuid": "9.0.2",
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
     "@uphold/commitlint-config": "1.1.1",
@@ -52,8 +53,10 @@
     "stylelint-declaration-block-no-ignored-properties": "2.7.0",
     "stylelint-order": "6.0.3",
     "stylelint-sass-render-errors": "3.0.1",
+    "swiper": "10.0.3",
     "typescript": "5.1.3",
-    "usehooks-ts": "2.9.1"
+    "usehooks-ts": "2.9.1",
+    "uuid": "9.0.0"
   },
   "name": "higa-pro",
   "overrides": {
