--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "dependencies": {
     "@commitlint/cli": "17.6.5",
     "@commitlint/config-conventional": "17.6.5",
+    "@hookform/error-message": "2.0.1",
     "@mpth/react-no-ssr": "1.0.1",
     "@types/node": "20.3.0",
+    "@types/nodemailer": "6.4.8",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "@types/react-scroll": "1.8.7",
@@ -11,6 +13,7 @@
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
     "@uphold/commitlint-config": "1.1.1",
+    "axios": "1.4.0",
     "commitlint-plugin-tense": "1.0.1",
     "eslint": "8.42.0",
     "eslint-config-google": "0.14.0",
@@ -31,15 +34,19 @@
     "husky": "8.0.3",
     "lint-staged": "13.2.2",
     "next": "13.4.5",
+    "nodemailer": "6.9.3",
     "pattern.css": "1.0.0",
     "prettier": "2.8.8",
     "rc-drawer": "6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "7.45.1",
     "react-modern-drawer": "1.2.0",
     "react-scroll": "1.8.9",
     "react-scroll-to-top": "3.0.0",
     "react-spacer": "1.3.0",
+    "react-textarea-autosize": "8.5.2",
+    "react-toastify": "9.1.3",
     "ress": "5.0.2",
     "sass": "1.63.3",
     "sass-mq": "6.0.0",
