--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@commitlint/config-conventional": "17.6.5",
     "@hookform/error-message": "2.0.1",
     "@mpth/react-no-ssr": "1.0.1",
+    "@total-typescript/ts-reset": "0.5.1",
     "@types/node": "20.3.0",
     "@types/nodemailer": "6.4.8",
     "@types/react": "18.2.11",
@@ -33,7 +34,9 @@
     "hamburger-react": "2.5.0",
     "husky": "8.0.3",
     "lint-staged": "13.2.2",
+    "microcms-js-sdk": "2.6.1",
     "next": "13.4.5",
+    "nextjs-toploader": "1.6.4",
     "nodemailer": "6.9.3",
     "pattern.css": "1.0.0",
     "prettier": "2.8.8",
