--- a/package.json
+++ b/package.json
@@ -47,12 +47,15 @@
     "react-modern-drawer": "1.2.0",
     "react-scroll": "1.8.9",
     "react-scroll-to-top": "3.0.0",
+    "react-slick": "0.29.0",
     "react-spacer": "1.3.0",
     "react-textarea-autosize": "8.5.2",
     "react-toastify": "9.1.3",
+    "react-use-measure": "2.1.1",
     "ress": "5.0.2",
     "sass": "1.63.3",
     "sass-mq": "6.0.0",
+    "slick-carousel": "1.8.1",
     "stylelint": "15.7.0",
     "stylelint-config-css-modules": "4.2.0",
     "stylelint-config-prettier-scss": "1.0.0",
@@ -93,5 +96,8 @@
     "stylelint-check": "stylelint-config-prettier-scss-check",
     "type-check": "tsc --noemit"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "devDependencies": {
+    "@types/react-slick": "0.23.12"
+  }
 }
