--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "1.4.0",
     "capitalize": "2.0.4",
     "dayjs": "1.11.10",
+    "framer-motion": "10.16.16",
     "hamburger-react": "2.5.0",
     "html-react-parser": "5.0.6",
     "microcms-js-sdk": "2.6.1",
@@ -15,11 +16,14 @@
     "nextjs-toploader": "1.6.4",
     "nodemailer": "6.9.3",
     "pattern.css": "1.0.0",
+    "query-string": "8.1.0",
     "rc-drawer": "6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hamburger-menu": "1.2.1",
     "react-hook-form": "7.45.1",
+    "react-modal": "3.16.1",
+    "react-modal-promise": "1.0.2",
     "react-modern-drawer": "1.2.0",
     "react-scroll": "1.8.9",
     "react-scroll-to-top": "3.0.0",
@@ -46,6 +50,7 @@
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "@types/react-hamburger-menu": "0.0.6",
+    "@types/react-modal": "3.16.3",
     "@types/react-scroll": "1.8.7",
     "@types/react-slick": "0.23.12",
     "@types/uuid": "9.0.2",
