--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "capitalize": "2.0.4",
     "dayjs": "1.11.10",
     "framer-motion": "10.16.16",
-    "hamburger-react": "2.5.0",
     "html-react-parser": "5.0.6",
     "microcms-js-sdk": "2.6.1",
     "next": "13.4.5",
@@ -17,7 +16,6 @@
     "nodemailer": "6.9.3",
     "pattern.css": "1.0.0",
     "query-string": "8.1.0",
-    "rc-drawer": "6.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hamburger-menu": "1.2.1",
@@ -26,18 +24,13 @@
     "react-modal-promise": "1.0.2",
     "react-modern-drawer": "1.2.0",
     "react-scroll": "1.8.9",
-    "react-scroll-to-top": "3.0.0",
-    "react-slick": "0.29.0",
     "react-spacer": "1.3.0",
     "react-textarea-autosize": "8.5.2",
     "react-toastify": "9.1.3",
     "react-use-measure": "2.1.1",
     "ress": "5.0.2",
-    "slick-carousel": "1.8.1",
-    "swiper": "10.0.3",
     "use-async-effect": "2.2.7",
-    "usehooks-ts": "2.9.1",
-    "uuid": "9.0.0"
+    "usehooks-ts": "2.9.1"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.5",
@@ -52,8 +45,6 @@
     "@types/react-hamburger-menu": "0.0.6",
     "@types/react-modal": "3.16.3",
     "@types/react-scroll": "1.8.7",
-    "@types/react-slick": "0.23.12",
-    "@types/uuid": "9.0.2",
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
     "@uphold/commitlint-config": "1.1.1",
@@ -93,13 +84,13 @@
   "name": "higa-pro",
   "overrides": {
     "stylelint-css-modules-no-global-scoped-selector": {
-      "stylelint@": "15.7.0"
+      "stylelint": "15.7.0"
     },
     "stylelint-csstree-validator": {
-      "stylelint@": "15.7.0"
+      "stylelint": "15.7.0"
     },
     "stylelint-sass-render-errors": {
-      "stylelint@": "15.7.0"
+      "stylelint": "15.7.0"
     }
   },
   "private": true,
