--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "assignees": ["piro0919"],
+  "automerge": true,
   "dependencyDashboard": true,
   "extends": ["config:base", ":timezone(Asia/Tokyo)"],
   "packageRules": [
