--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "dependencies": {
     "@hookform/error-message": "2.0.1",
+    "@hookform/resolvers": "3.3.3",
     "@mpth/react-no-ssr": "1.0.1",
-    "@tsparticles/react": "3.0.0",
-    "@tsparticles/slim": "3.0.3",
+    "@react-hook/previous": "1.0.1",
     "array-sort": "1.0.0",
     "axios": "1.6.3",
     "capitalize": "2.0.4",
     "dayjs": "1.11.10",
     "framer-motion": "10.16.16",
     "html-react-parser": "5.0.11",
+    "i18next": "23.7.13",
     "microcms-js-sdk": "2.7.0",
     "next": "14.0.4",
     "nextjs-toploader": "1.6.4",
@@ -20,17 +21,18 @@
     "react-dom": "18.2.0",
     "react-hamburger-menu": "1.2.1",
     "react-hook-form": "7.49.2",
-    "react-modal": "3.16.1",
-    "react-modal-promise": "1.0.2",
     "react-modern-drawer": "1.2.2",
     "react-scroll": "1.9.0",
-    "react-spacer": "1.3.0",
+    "react-sweetalert2": "0.6.0",
     "react-textarea-autosize": "8.5.3",
     "react-toastify": "9.1.3",
     "react-use-measure": "2.1.1",
     "ress": "5.0.2",
-    "use-async-effect": "2.2.7",
-    "usehooks-ts": "2.9.1"
+    "shuffle-array": "1.0.1",
+    "typewriter-effect": "2.21.0",
+    "usehooks-ts": "2.9.1",
+    "zod": "3.22.4",
+    "zod-i18n-map": "2.23.0"
   },
   "devDependencies": {
     "@commitlint/cli": "18.4.3",
@@ -43,8 +45,8 @@
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "@types/react-hamburger-menu": "0.0.6",
-    "@types/react-modal": "3.16.3",
     "@types/react-scroll": "1.8.7",
+    "@types/shuffle-array": "1.0.5",
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
     "@uphold/commitlint-config": "1.1.1",
@@ -100,6 +102,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:style": "stylelint --fix '**/*.scss'",
+    "lint:timing": "TIMING=1 next lint",
     "prepare": "npx husky install",
     "prettier": "prettier --write .",
     "start": "next start",
