--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-hamburger-menu": "1.2.1",
     "react-hook-form": "7.49.2",
+    "react-intersection-observer": "9.5.3",
     "react-modern-drawer": "1.2.2",
     "react-scroll": "1.9.0",
     "react-sweetalert2": "0.6.0",
