--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
+    "next-sitemap": "4.2.3",
     "prettier": "3.1.1",
     "sass": "1.63.3",
     "sass-mq": "6.0.0",
@@ -104,6 +105,7 @@
     "lint:fix": "next lint --fix",
     "lint:style": "stylelint --fix '**/*.scss'",
     "lint:timing": "TIMING=1 next lint",
+    "postbuild": "next-sitemap",
     "prepare": "npx husky install",
     "prettier": "prettier --write .",
     "start": "next start",
