--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,19 +2,16 @@
   "extends": [
     "eslint:recommended",
     "google",
-    "standard",
     "plugin:@typescript-eslint/recommended",
     "plugin:@typescript-eslint/recommended-requiring-type-checking",
     "plugin:typescript-sort-keys/recommended",
-    "next/core-web-vitals",
     "prettier"
   ],
-  "ignorePatterns": ["*.d.ts", "*.js"],
+  "ignorePatterns": [
+    "*.d.ts",
+    "*.js"
+  ],
   "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "project": ["./tsconfig.json"],
-    "warnOnUnsupportedTypeScriptVersion": false
-  },
   "plugins": [
     "ext",
     "filenames",
@@ -28,8 +25,18 @@
     "@typescript-eslint/explicit-function-return-type": "error",
     "@typescript-eslint/no-misused-promises": "off",
     "@typescript-eslint/no-unused-vars": "off",
-    "ext/lines-between-object-properties": ["error", "never"],
-    "filenames/match-exported": ["error", ["camel", "kebab", "pascal"]],
+    "ext/lines-between-object-properties": [
+      "error",
+      "never"
+    ],
+    "filenames/match-exported": [
+      "error",
+      [
+        "camel",
+        "kebab",
+        "pascal"
+      ]
+    ],
     "filenames/match-regex": "error",
     "filenames/no-index": "off",
     "import/newline-after-import": [
@@ -49,6 +56,7 @@
       }
     ],
     "import/prefer-default-export": "error",
+    "new-cap": "off",
     "newline-before-return": "error",
     "no-duplicate-imports": "error",
     "no-multiple-empty-lines": [
@@ -104,7 +112,10 @@
       },
       {
         "blankLine": "never",
-        "next": ["case", "default"],
+        "next": [
+          "case",
+          "default"
+        ],
         "prev": "case"
       },
       {
@@ -120,14 +131,20 @@
     ],
     "postcss-modules/no-undef-class": "error",
     "postcss-modules/no-unused-class": "error",
-    "quotes": ["error", "double"],
+    "quotes": [
+      "error",
+      "double"
+    ],
     "react-hooks/exhaustive-deps": [
       "error",
       {
         "enableDangerousAutofixThisMayCauseInfiniteLoops": true
       }
     ],
-    "react/jsx-boolean-value": ["error", "always"],
+    "react/jsx-boolean-value": [
+      "error",
+      "always"
+    ],
     "react/jsx-newline": [
       "error",
       {
@@ -136,7 +153,10 @@
     ],
     "react/jsx-sort-props": "error",
     "require-jsdoc": "off",
-    "semi": ["error", "always"],
+    "semi": [
+      "error",
+      "always"
+    ],
     "sort-destructure-keys/sort-destructure-keys": "error",
     "sort-imports": [
       "error",
