--- a/package.json
+++ b/package.json
@@ -1,53 +1,7 @@
 {
-  "dependencies": {
-    "@hookform/error-message": "2.0.1",
-    "@hookform/resolvers": "3.3.3",
-    "@mpth/react-no-ssr": "1.0.1",
-    "@react-hook/previous": "1.0.1",
-    "array-sort": "1.0.0",
-    "axios": "1.6.3",
-    "capitalize": "2.0.4",
-    "dayjs": "1.11.10",
-    "framer-motion": "10.16.16",
-    "html-react-parser": "5.0.11",
-    "i18next": "23.7.13",
-    "microcms-js-sdk": "2.7.0",
-    "next": "14.0.4",
-    "nextjs-toploader": "1.6.4",
-    "nodemailer": "6.9.8",
-    "pattern.css": "1.0.0",
-    "query-string": "8.1.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hamburger-menu": "1.2.1",
-    "react-hook-form": "7.49.2",
-    "react-intersection-observer": "9.5.3",
-    "react-modern-drawer": "1.2.2",
-    "react-scroll": "1.9.0",
-    "react-sweetalert2": "0.6.0",
-    "react-textarea-autosize": "8.5.3",
-    "react-toastify": "9.1.3",
-    "react-use-measure": "2.1.1",
-    "ress": "5.0.2",
-    "shuffle-array": "1.0.1",
-    "typewriter-effect": "2.21.0",
-    "usehooks-ts": "2.9.1",
-    "zod": "3.22.4",
-    "zod-i18n-map": "2.23.0"
-  },
   "devDependencies": {
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
-    "@total-typescript/ts-reset": "0.5.1",
-    "@types/array-sort": "1.0.3",
-    "@types/capitalize": "2.0.2",
-    "@types/node": "20.3.0",
-    "@types/nodemailer": "6.4.8",
-    "@types/react": "18.2.11",
-    "@types/react-dom": "18.2.4",
-    "@types/react-hamburger-menu": "0.0.6",
-    "@types/react-scroll": "1.8.7",
-    "@types/shuffle-array": "1.0.5",
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
     "@uphold/commitlint-config": "1.1.1",
@@ -56,7 +10,6 @@
     "eslint-config-google": "0.14.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "9.1.0",
-    "eslint-config-standard": "17.1.0",
     "eslint-plugin-ext": "0.1.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-import": "2.27.5",
@@ -69,10 +22,7 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "husky": "8.0.3",
     "lint-staged": "15.2.0",
-    "next-sitemap": "4.2.3",
     "prettier": "3.1.1",
-    "sass": "1.63.3",
-    "sass-mq": "6.0.0",
     "stylelint": "15.7.0",
     "stylelint-config-css-modules": "4.2.0",
     "stylelint-config-prettier-scss": "1.0.0",
@@ -82,8 +32,7 @@
     "stylelint-csstree-validator": "3.0.0",
     "stylelint-declaration-block-no-ignored-properties": "2.7.0",
     "stylelint-order": "6.0.3",
-    "stylelint-sass-render-errors": "3.0.1",
-    "typescript": "5.1.3"
+    "stylelint-sass-render-errors": "3.0.1"
   },
   "name": "higa-pro",
   "overrides": {
@@ -99,18 +48,10 @@
   },
   "private": true,
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
-    "lint:style": "stylelint --fix '**/*.scss'",
-    "lint:timing": "TIMING=1 next lint",
-    "postbuild": "next-sitemap",
-    "prepare": "npx husky install",
-    "prettier": "prettier --write .",
-    "start": "next start",
-    "stylelint-check": "stylelint-config-prettier-scss-check",
-    "type-check": "tsc --noemit"
+    "prepare": "npx husky install"
   },
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "workspaces": [
+    "apps/*"
+  ]
 }
