--- a/apps/public/package.json
+++ b/apps/public/package.json
@@ -1,16 +1,18 @@
 {
   "dependencies": {
+    "@contentful/rich-text-react-renderer": "15.19.0",
     "@hookform/error-message": "2.0.1",
-    "@hookform/resolvers": "3.3.3",
+    "@hookform/resolvers": "3.3.4",
     "@mpth/react-no-ssr": "1.0.1",
     "@react-hook/previous": "1.0.1",
     "array-sort": "1.0.0",
-    "axios": "1.6.3",
+    "axios": "1.6.5",
     "capitalize": "2.0.4",
+    "contentful-management": "11.7.3",
     "dayjs": "1.11.10",
-    "framer-motion": "10.16.16",
+    "framer-motion": "10.17.9",
     "html-react-parser": "5.0.11",
-    "i18next": "23.7.13",
+    "i18next": "23.7.16",
     "microcms-js-sdk": "2.7.0",
     "next": "14.0.4",
     "nextjs-toploader": "1.6.4",
@@ -35,6 +37,7 @@
     "zod-i18n-map": "2.23.0"
   },
   "devDependencies": {
+    "@contentful/rich-text-types": "16.3.0",
     "@total-typescript/ts-reset": "0.5.1",
     "@types/array-sort": "1.0.3",
     "@types/capitalize": "2.0.2",
@@ -44,6 +47,7 @@
     "@types/react-dom": "18.2.4",
     "@types/react-hamburger-menu": "0.0.6",
     "@types/react-scroll": "1.8.7",
+    "contentful-typescript-codegen": "3.4.0",
     "next-sitemap": "4.2.3",
     "sass": "1.63.3",
     "sass-mq": "6.0.0",
@@ -53,12 +57,14 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "contentful-typescript-codegen": "contentful-typescript-codegen --namespace Contentful --output contentful.d.ts --localization",
     "dev": "next dev",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "lint:style": "stylelint --fix '**/*.scss'",
     "lint:timing": "TIMING=1 next lint",
     "postbuild": "next-sitemap",
+    "prebuild": "npm run contentful-typescript-codegen",
     "prettier": "prettier --write .",
     "start": "next start",
     "stylelint-check": "stylelint-config-prettier-scss-check",
