--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,15 +1,19 @@
 {
   "dependencies": {
+    "@hookform/resolvers": "3.3.4",
     "@stytch/nextjs": "17.0.0",
     "@stytch/vanilla-js": "4.3.0",
     "@szhsin/react-menu": "4.1.0",
     "@tanstack/react-table": "8.11.6",
     "@uiw/react-md-editor": "4.0.3",
     "dayjs": "1.11.10",
+    "html-to-md": "0.8.5",
+    "marked": "11.2.0",
     "next": "14.0.4",
     "nextjs-toploader": "1.6.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "7.49.3",
     "react-icons": "5.0.1",
     "react-spacer": "1.3.0",
     "react-use-measure": "2.1.1",
@@ -17,6 +21,7 @@
     "ress": "5.0.2",
     "stytch": "10.2.0",
     "usehooks-ts": "2.9.4",
+    "zod": "3.22.4",
     "zustand": "4.4.7"
   },
   "devDependencies": {
@@ -24,6 +29,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "next-remove-imports": "1.0.12",
     "next-sitemap": "4.2.3",
     "sass": "1.69.7",
     "sass-mq": "6.0.0",
